just commit for get this code ~ i dont know where i edit

--- a/footer.html
+++ b/footer.html
@@ -15,9 +15,9 @@
       <div class="col-md">
         <h3>Products</h3>
         <ul class="list-unstyled nav-links">
-          <li><a href="#">Battery</a></li>
-          <li><a href="#">Filter</a></li>
-          <li><a href="#">Marine Spare Parts</a></li>
+          <li><a href="products/battery">Battery</a></li>
+          <li><a href="products/filter">Filter</a></li>
+          <li><a href="products/marine-spare-parts">Marine Spare Parts</a></li>
         </ul>
       </div>
       
@@ -27,7 +27,6 @@
           <li><a href="#" class="pl-0"><i class="fa-brands fa-instagram"></i></a></li>
           <li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
           <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-          <li><a href="#"><i class="fa-brands fa-pinterest"></i></a></li>
         </ul>
       </div>
     </div> 
@@ -35,7 +34,7 @@
     <div class="row ">
       <div class="col-12 text-center">
         <div class="copyright mt-5 pt-5">
-          <p><small>&copy; 2019&mdash;2020 All Rights Reserved.</small></p>
+          <p><small>&copy; 2024 All Rights Reserved.</small></p>
         </div>
       </div>
     </div> 
