--- a/products/ac-parts.html
+++ b/products/ac-parts.html
@@ -93,79 +93,79 @@
     <div class="row">
 
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/acparts/ac compressor.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">ac compressor</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/acparts/ac condenser.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">ac condenser</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/acparts/ac filter.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">ac filter</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/acparts/evaporator.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">evaporator</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/acparts/expansion valve.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">expansion valve</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/acparts/ac fan motor.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">ac fan motor</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/acparts/ac gas.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">ac gas</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
