--- a/products/body-parts.html
+++ b/products/body-parts.html
@@ -93,189 +93,189 @@
     <div class="row">
 
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/body parts/all doors.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">all doors</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/body parts/door handles.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">door handles</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/body parts/front glass.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">front glass</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/body parts/side mirror.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">side mirror</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/body parts/radiator.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">radiator</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/body parts/fr and rr bumper.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">fr and rr bumper</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/body parts/side glass.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">side glass</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/body parts/bonnet.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">bonnet</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/body parts/mud flap.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">mud flap</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/body parts/fender.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">fender</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/body parts/door pad.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">door pad</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/body parts/seat belt.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">seat belt</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/body parts/wiper blade.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">wiper blade</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/body parts/wiper arm.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">wiper arm</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/body parts/wiper tank.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">wiper tank</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/body parts/wiper nozzle.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">wiper nozzle</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/body parts/door lock.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">door lock</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
