--- a/products/electrical-parts.html
+++ b/products/electrical-parts.html
@@ -93,145 +93,145 @@
     <div class="row">
 
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/electrical parts/starter motor.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">starter motor</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/electrical parts/alternator.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">alternator</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/electrical parts/head lamp.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">head lamp</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/electrical parts/indicator lamp.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">indicator lamp</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/electrical parts/wiper motor.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">wiper motor</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/electrical parts/window motor.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">window motor</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/electrical parts/speedo meter.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">speedo meter</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/electrical parts/hour meter.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">hour meter</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/electrical parts/temperature sensor.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">temperature sensor</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/electrical parts/oil sensor.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">oil sensor</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/electrical parts/solenoid valve.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">solenoid valve</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/electrical parts/fuse.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">fuse</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/electrical parts/fuel pump.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">fuel pump</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
