--- a/products/filter.html
+++ b/products/filter.html
@@ -93,79 +93,79 @@
     <div class="row">
 
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/filter/fleet-guard-Lube Filter Cellulose Cartridge.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">Fleet guard-Lube Filter Cellulose Cartridge</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/filter/DONALADSON-Replacement Filters.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">Donaladson-Replacement Filters</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/filter/Baldwin - Axial Seal Air Filter.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">Baldwin-Axial Seal Air Filter</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/filter/Parker-Cabin Air Filters.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">Parker-Cabin Air Filters</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/filter/mann-fuel filter.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">Mann-fuel filter</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/filter/Hengst-air filter for aftermarket.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">Hengst-air filter for aftermarket</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/filter/Wix-cabin filters.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">Wix-cabin filters</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
