--- a/products/suspenssion.html
+++ b/products/suspenssion.html
@@ -93,57 +93,57 @@
     <div class="row">
 
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/suspension/shock.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">shock</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/suspension/shock bush.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">shock bush</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/suspension/lover arm.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">lover arm</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/suspension/upper arm.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">upper arm</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details?url=acdelco'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/suspension/tie rod end.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">tie rod end</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="" class="call-btn mx-auto">Enquiry Now</a>
           </div>
         </div>
       </div>
